# chatgpt-clone

./: .env.example  .gitignore  CLAUDE.md  README.md  design.md  pyproject.toml  requirements.txt  test_chat_bot.py  todo.md
src/chatgpt_clone/: __init__.py  chat_bot.py
tests/: test_chat_bot.py
